fix(table): fix align helper classes for .sbb-table

--- a/projects/sbb-esta/angular-public/src/styles/typography/_table.scss
+++ b/projects/sbb-esta/angular-public/src/styles/typography/_table.scss
@@ -119,7 +119,7 @@ $tableCaptionColor: $sbbColorGrey;
 }
 
 @mixin sbbTable() {
-  table.sbb-table {
+  .sbb-table {
     @include table();
   }
 }
